--- a/package.json
+++ b/package.json
@@ -4,8 +4,19 @@
   "description": "Proyecto Final Venta Online - Juan Diego Solís Martiínez",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Juan Solís",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.29.1",
+    "mongoose": "^6.1.8",
+    "nodemon": "^2.0.15",
+    "pdfmake": "^0.2.4"
+  }
 }
